# swipe

./: .gitmodules  CMakeLists.txt  README.md
cmake/Modules/: FindFFTW.cmake
include/: swipe.h
src/: fitpack.f  main.cpp  swipe.cpp
